Simple client & server

--- a/bridge.xcodeproj/xcshareddata/xcschemes/bridge.xcscheme
+++ b/bridge.xcodeproj/xcshareddata/xcschemes/bridge.xcscheme
@@ -51,6 +51,20 @@
             ReferencedContainer = "container:bridge.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "127.0.0.1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "4443"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "2457081762"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
